--- a/style.css
+++ b/style.css
@@ -1,18 +1,87 @@
 body {
   font-family: "Poppins";
-  font-weight: normal;
   background-color: rgb(208, 245, 245);
   color: black;
-  margin: 40px 20%;
+  margin: 0;
 }
 
-nav,
-h2 {
-  font-family: "Balsamiq Sans";
+main,
+.header-info {
+  width: 80%;
+  margin: 0 auto;
 }
+
+/* CREATE NAV BAR  */
+
+header {
+  background: rgb(158, 179, 247);
+}
+
+header::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.logo {
+  float: left;
+  text-transform: uppercase;
+  font-size: 40px;
+}
+
+nav {
+  float: right;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+nav li {
+  display: inline-block;
+  margin-left: 50px;
+  padding-top: 45px;
+}
+
+nav a {
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+nav a:hover {
+  color: rgb(208, 245, 245);
+}
+
+/* MAIN SECTION */
 
 section {
-  margin-bottom: 40px;
+  margin: 15px;
+}
+
+hr {
+  border: 1px solid rgb(108, 141, 248);
+}
+
+a {
+  color: rgb(33, 83, 248);
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(158, 179, 247);
+}
+
+#about-me-text {
+  width: 50%;
+  display: inline-block;
+}
+
+img {
+  width: 40%;
+  float: right;
 }
 
 p {
@@ -21,8 +90,4 @@ p {
 
 .project {
   margin: 20px auto;
-}
-
-.nested {
-  margin: 10px auto;
 }
