--- a/style.css
+++ b/style.css
@@ -77,19 +77,58 @@ a:hover {
 #about-me-text {
   width: 50%;
   display: inline-block;
+  line-height: 30px;
 }
 
-img {
+#profile {
   height: 400px;
   margin-left: 100px;
   display: inline-block;
   flex-shrink: 0;
 }
 
-p {
+.project {
+  margin-bottom: 20px;
+  width: 95%;
+}
+
+.skills {
+  display: inline-block;
+  margin-right: 30px;
+}
+
+#skills {
+  width: 95%;
+}
+
+.second-servings-info {
+  width: 50%;
+  display: inline-block;
   line-height: 30px;
 }
 
-.project {
-  margin: 20px auto;
+#second-servings {
+  width: 400px;
+  height: auto;
+  display: inline-block;
+  flex-shrink: 0;
+  margin-left: 100px;
+}
+
+.app-screen {
+  width: 250px;
+  height: auto;
+  display: inline-block;
+  flex-shrink: 0;
+  margin-right: 20px;
+}
+
+#react-logo {
+  width: 300px;
+  height: auto;
+}
+
+#github-logo {
+  width: 200px;
+  height: auto;
 }
