--- a/style.css
+++ b/style.css
@@ -2,133 +2,10 @@ body {
   font-family: "Poppins";
   background-color: rgb(208, 245, 245);
   color: black;
-  margin: 0;
+  font-size: xx-large;
 }
 
-main,
-.header-info {
-  width: 80%;
-  margin: 0 auto;
-}
-
-/* CREATE NAV BAR  */
-
-header {
-  background: rgb(158, 179, 247);
-}
-
-header::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.logo {
-  float: left;
-  text-transform: uppercase;
-  font-size: 40px;
-}
-
-nav {
-  float: right;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-nav li {
-  display: inline-block;
-  margin-left: 50px;
-  padding-top: 45px;
-}
-
-nav a {
-  color: black;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-nav a:hover {
-  color: rgb(208, 245, 245);
-}
-
-/* MAIN SECTION */
-
-section {
-  margin: 15px;
-}
-
-hr {
-  border: 1px solid rgb(108, 141, 248);
-}
-
-a {
-  color: rgb(33, 83, 248);
-  text-decoration: none;
-}
-
-a:hover {
-  color: rgb(158, 179, 247);
-}
-
-#about-me-text {
-  width: 50%;
-  display: inline-block;
-  line-height: 30px;
-}
-
-#profile {
-  height: 350px;
-  margin-left: 100px;
-  display: inline-block;
-  flex-shrink: 0;
-}
-
-.project {
-  margin-bottom: 20px;
-  width: 95%;
-}
-
-.skills {
-  display: inline-block;
-  margin-right: 30px;
-}
-
-#skills {
-  width: 95%;
-}
-
-.second-servings-info {
-  width: 50%;
-  display: inline-block;
-  line-height: 30px;
-}
-
-#second-servings {
-  width: 400px;
-  height: auto;
-  display: inline-block;
-  flex-shrink: 0;
-  margin-left: 100px;
-}
-
-.app-screen {
-  width: 250px;
-  height: auto;
-  display: inline-block;
-  flex-shrink: 0;
-  margin-right: 20px;
-}
-
-#react-logo {
-  width: 300px;
-  height: auto;
-}
-
-#github-logo {
-  width: 200px;
-  height: auto;
+main {
+  padding: 20% 0;
+  text-align: center;
 }
